# python-whatsapp-bot

./: .dockerignore  .gitignore  Dockerfile  QUICK_START.md  REFACTORING_SUMMARY.md  TROUBLESHOOTING.md  celery_worker.py  docker-compose.yml  example.env  gunicorn_config.py  main.py  nginx.conf  pyproject.toml  requirements-production.txt  requirements.txt  run.py  start.sh  stop.sh  test_webhook.py  threads_db
app/: __init__.py  config.py
app/api/: __init__.py  chat.py  health.py  messages.py  webhook.py
app/application/: __init__.py
app/application/services/: __init__.py  authentication_service.py  conversation_service.py
app/application/use_cases/: __init__.py  process_message_use_case.py
app/config/: __init__.py  settings.py
app/decorators/: security.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  flight.py  message.py
app/domain/interfaces/: __init__.py  ai_provider.py  conversation_repository.py  function_handler.py  message_provider.py  session_storage.py  thread_repository.py  travel_api_client.py  vertical_manager.py
app/infrastructure/: celery_app.py  redis_client.py  service_container.py
app/infrastructure/adapters/: __init__.py  (+1 more)
app/middleware/: error_handler.py  monitoring.py  rate_limiter.py
app/repositories/: thread_repository.py
app/services/: message_handler.py  openai_service.py  whatsapp_service.py
app/tasks/: message_tasks.py
app/utils/: flight_response_parser.py  flight_utils.py  phone_validator.py  text_processor.py  webhook_parser.py  whatsapp_utils.py
app/views/: __init__.py  health.py  webhook.py
(+32 files in other folders)
