[project]
name = "python-whatsapp-bot"
version = "0.1.0"
description = "WhatsApp bot with OpenAI integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "flask-limiter>=3.5.0",
    "prometheus-client>=0.19.0",
    "sentry-sdk[flask]>=2.0.0",
    "langchain-openai>=1.0.2",
    "langchain>=1.0.5",
    "langchain-core>=1.0.4",
    "langchain-community>=0.3.0",
    "pydantic>=2.12.4",
    "python-dateutil>=2.8.0",
]
